# LoseRAR

./: .gitignore  Cargo.toml  README.md  build.rs  check_output.txt
src/: main.rs
src/archive/: entry.rs  mod.rs
src/compression/: mod.rs  progress.rs  zip_writer.rs
src/extraction/: mod.rs  zip_reader.rs
src/fs/: browser.rs  mod.rs
src/ui/: app.rs  mod.rs  theme.rs
src/ui/dialogs/: completion.rs  compress.rs  extract.rs  mod.rs
src/ui/panels/: file_list.rs  mod.rs  sidebar.rs  status_bar.rs  toolbar.rs
tests/: compression_tests.rs
