[package]
name = "loserar"
version = "0.1.0"
edition = "2021"
description = "A modern open-source alternative to WinRAR"
authors = ["Antigravity <antigravity@deepmind.com>"]

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = "0.27.2"
zip = "0.6.6"
walkdir = "2.5.0"
rfd = "0.14.1"
rayon = "1.10.0"
anyhow = "1.0.86"
chrono = "0.4.38"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
crossbeam-channel = "0.5.13"
dirs = "5.0.1"
winapi = { version = "0.3.9", features = ["fileapi"] }


[build-dependencies]
winres = "0.1.12"
